fix: 🐛 scrollbar gutter for main

--- a/src/layouts/Base.css
+++ b/src/layouts/Base.css
@@ -2,6 +2,7 @@
 
 html {
   @apply text-base;
+  scrollbar-gutter: stable;
 }
 
 h1,
